[package]
name = "timtcana"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
log = "0"
pretty_env_logger = "0"
rusqlite = { ver = "0.23", features = ["bundled"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["macros"] }

[workspace]
